Fixes horizontal spacing issue.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,7 @@ body {
   font-size: 18px;
   letter-spacing: -0.33px;
   font-weight: 400;
+  width: 100vw;
 }
 
 a {
